--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -571,8 +571,8 @@ body{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   font-family: Nunito, sans-serif;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
   --tw-text-opacity: 1;
   color: rgb(165 165 165 / var(--tw-text-opacity));
 }
@@ -582,23 +582,28 @@ main{
 }
 
 h1{
-  font-size: 4.5rem;
+  font-size: 3rem;
   line-height: 1;
   font-weight: 300;
 }
 
 h2{
-  font-size: 3rem;
-  line-height: 1;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
   --tw-text-opacity: 1;
   color: rgb(179 222 0 / var(--tw-text-opacity));
 }
 
 h3{
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
   --tw-text-opacity: 1;
   color: rgb(110 110 110 / var(--tw-text-opacity));
+}
+
+h4{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -612,7 +617,8 @@ a, svg, button{
 }
 
 li, p{
-  line-height: 1.75rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 p{
@@ -654,6 +660,7 @@ p{
 }
 
 .sessao{
+  z-index: 40;
   display: flex;
   width: 100%;
   flex-direction: column;
@@ -683,12 +690,12 @@ p{
   align-items: center;
   border-radius: 9999px;
   border-width: 0px;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  font-size: 1rem;
-  line-height: 1.5rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
   font-weight: 600;
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -711,8 +718,8 @@ p{
   padding-bottom: 0.5rem;
   padding-left: 0;
   padding-right: 0;
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
   transition-property: all;
@@ -731,8 +738,8 @@ p{
   margin-left: 1rem;
   margin-right: 1rem;
   display: inline-block;
-  height: 1rem;
-  width: 1rem;
+  height: 0.5rem;
+  width: 0.5rem;
   cursor: pointer;
   border-radius: 9999px;
   --tw-bg-opacity: 1;
@@ -759,28 +766,36 @@ p{
   position: relative;
 }
 
-.inset-0{
-  inset: 0;
+.-bottom-1\/3{
+  bottom: -33.333333%;
 }
 
-.bottom-16{
-  bottom: 4rem;
+.-right-8{
+  right: -2rem;
 }
 
 .bottom-4{
   bottom: 1rem;
 }
 
+.bottom-8{
+  bottom: 2rem;
+}
+
 .left-0{
   left: 0;
+}
+
+.left-1\/3{
+  left: 33.333333%;
 }
 
 .right-0{
   right: 0;
 }
 
-.right-16{
-  right: 4rem;
+.right-8{
+  right: 2rem;
 }
 
 .top-0{
@@ -828,21 +843,22 @@ p{
   margin-right: auto;
 }
 
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .my-8{
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
 
-.mb-12{
-  margin-bottom: 3rem;
+.mb-0{
+  margin-bottom: 0;
 }
 
 .mb-16{
   margin-bottom: 4rem;
-}
-
-.mb-2{
-  margin-bottom: 0.5rem;
 }
 
 .mb-32{
@@ -853,6 +869,10 @@ p{
   margin-bottom: 1rem;
 }
 
+.mb-8{
+  margin-bottom: 2rem;
+}
+
 .ml-2{
   margin-left: 0.5rem;
 }
@@ -861,8 +881,8 @@ p{
   margin-left: 1rem;
 }
 
-.mr-8{
-  margin-right: 2rem;
+.mr-4{
+  margin-right: 1rem;
 }
 
 .mt-24{
@@ -913,12 +933,8 @@ p{
   height: 4rem;
 }
 
-.h-160{
-  height: 40rem;
-}
-
-.h-20{
-  height: 5rem;
+.h-4{
+  height: 1rem;
 }
 
 .h-dvh{
@@ -942,12 +958,16 @@ p{
   min-height: 5rem;
 }
 
-.w-16{
-  width: 4rem;
+.w-10{
+  width: 2.5rem;
 }
 
 .w-2\/3{
   width: 66.666667%;
+}
+
+.w-3\/12{
+  width: 25%;
 }
 
 .w-4\/12{
@@ -971,12 +991,29 @@ p{
   width: 100%;
 }
 
-.w-6\/12{
-  width: 50%;
+.w-16{
+  width: 4rem;
 }
 
-.w-3\/12{
-  width: 25%;
+.w-4{
+  width: 1rem;
+}
+
+.w-6{
+  width: 1.5rem;
+}
+
+.w-5{
+  width: 1.25rem;
+}
+
+.rotate-12{
+  --tw-rotate: 12deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform{
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @keyframes fadeInRight{
@@ -1011,8 +1048,8 @@ p{
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+.flex-row{
+  flex-direction: row;
 }
 
 .flex-col{
@@ -1035,12 +1072,20 @@ p{
   justify-content: space-between;
 }
 
-.gap-12{
-  gap: 3rem;
-}
-
 .gap-4{
   gap: 1rem;
+}
+
+.gap-8{
+  gap: 2rem;
+}
+
+.gap-y-8{
+  row-gap: 2rem;
+}
+
+.gap-y-4{
+  row-gap: 1rem;
 }
 
 .overflow-hidden{
@@ -1055,25 +1100,12 @@ p{
   border-radius: 0.375rem;
 }
 
-.border-8{
-  border-width: 8px;
-}
-
-.border-4{
-  border-width: 4px;
-}
-
 .border-2{
   border-width: 2px;
 }
 
-.border-b-2{
-  border-bottom-width: 2px;
-}
-
-.border-branco{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+.border{
+  border-width: 1px;
 }
 
 .border-verde{
@@ -1096,8 +1128,9 @@ p{
   background-color: rgb(37 37 37 / var(--tw-bg-opacity));
 }
 
-.bg-opacity-20{
-  --tw-bg-opacity: 0.2;
+.bg-verde{
+  --tw-bg-opacity: 1;
+  background-color: rgb(179 222 0 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b{
@@ -1114,30 +1147,6 @@ p{
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-\[rgba\(12\2c 30\2c 53\2c 0\.8\)\]{
-  --tw-gradient-from: rgba(12,30,53,0.8) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgba(12, 30, 53, 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[rgba\(12\2c 30\2c 53\2c 0\.2\)\]{
-  --tw-gradient-from: rgba(12,30,53,0.2) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgba(12, 30, 53, 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.to-\[rgba\(0\2c 69\2c 160\2c 0\.1\)\]{
-  --tw-gradient-to: rgba(0,69,160,0.1) var(--tw-gradient-to-position);
-}
-
-.to-\[rgba\(0\2c 69\2c 160\2c 0\.8\)\]{
-  --tw-gradient-to: rgba(0,69,160,0.8) var(--tw-gradient-to-position);
-}
-
-.to-\[rgba\(0\2c 69\2c 160\2c 0\.4\)\]{
-  --tw-gradient-to: rgba(0,69,160,0.4) var(--tw-gradient-to-position);
-}
-
 .to-\[rgba\(0\2c 69\2c 160\2c 0\.3\)\]{
   --tw-gradient-to: rgba(0,69,160,0.3) var(--tw-gradient-to-position);
 }
@@ -1148,10 +1157,6 @@ p{
 
 .bg-center{
   background-position: center;
-}
-
-.bg-bottom{
-  background-position: bottom;
 }
 
 .object-cover{
@@ -1168,9 +1173,9 @@ p{
   padding-right: 0;
 }
 
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .py-4{
@@ -1183,6 +1188,14 @@ p{
   padding-bottom: 2rem;
 }
 
+.pb-0{
+  padding-bottom: 0;
+}
+
+.pt-4{
+  padding-top: 1rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -1192,14 +1205,14 @@ p{
   line-height: 2.25rem;
 }
 
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-9xl{
+  font-size: 8rem;
+  line-height: 1;
 }
 
 .text-sm{
@@ -1207,8 +1220,17 @@ p{
   line-height: 1.25rem;
 }
 
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold{
   font-weight: 700;
+}
+
+.font-extrabold{
+  font-weight: 800;
 }
 
 .font-normal{
@@ -1217,10 +1239,6 @@ p{
 
 .font-semibold{
   font-weight: 600;
-}
-
-.font-extrabold{
-  font-weight: 800;
 }
 
 .leading-4{
@@ -1237,6 +1255,11 @@ p{
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-cinza{
+  --tw-text-opacity: 1;
+  color: rgb(110 110 110 / var(--tw-text-opacity));
+}
+
 .text-cinza-claro{
   --tw-text-opacity: 1;
   color: rgb(165 165 165 / var(--tw-text-opacity));
@@ -1247,8 +1270,8 @@ p{
   color: rgb(179 222 0 / var(--tw-text-opacity));
 }
 
-.opacity-50{
-  opacity: 0.5;
+.opacity-5{
+  opacity: 0.05;
 }
 
 .transition-all{
