--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -40,6 +40,10 @@
     h1, h2, h3, h4, h5, h6 {
         @apply mb-6
     }
+
+    hr {
+        @apply w-3/12 mx-auto border-2 my-8 border-cinza-claro opacity-20
+    }
     
     a, svg, button {
         @apply no-underline cursor-pointer m-0
@@ -70,14 +74,22 @@
     .btn {
         @apply text-sm outline-none border-0 font-semibold inline-flex items-center transition-all py-3 px-6 rounded-full hover:px-10
     }
-    
+
     .nav-link {
         @apply text-branco inline text-sm ml-12 py-2 px-0 border-b-4 border-[rgba(0,0,0,0)] transition-all duration-200 hover:border-verde
     }
-    
+
+    .banner-box {
+        @apply coluna animate-fade-in-right transition-all bg-branco rounded-lg overflow-hidden
+    }
+
+    .banner-box h4 {
+        @apply text-branco bg-verde h-16 font-extrabold px-4 pt-4 pb-0 mb-0
+    }
+
     .dot {
         @apply cursor-pointer h-2 w-2 my-0 mx-4 bg-cinza-claro rounded-full inline-block transition-all hover:bg-verde
-    }
+    }    
 }
 
 @layer utilities {
