--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -610,6 +610,18 @@ h1, h2, h3, h4, h5, h6{
   margin-bottom: 1.5rem;
 }
 
+hr{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  width: 25%;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(165 165 165 / var(--tw-border-opacity));
+  opacity: 0.2;
+}
+
 a, svg, button{
   margin: 0;
   cursor: pointer;
@@ -732,6 +744,52 @@ p{
   border-color: rgb(179 222 0 / var(--tw-border-opacity));
 }
 
+.banner-box{
+  display: flex;
+  flex-direction: column;
+}
+
+@keyframes fadeInRight{
+  0%{
+    transform: translateX(100%);
+    opacity: 0;
+  }
+
+  50%{
+    opacity: 0;
+  }
+
+  100%{
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+.banner-box{
+  animation: fadeInRight 2s ease-in-out;
+  overflow: hidden;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.banner-box h4{
+  margin-bottom: 0;
+  height: 4rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(179 222 0 / var(--tw-bg-opacity));
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 0;
+  font-weight: 800;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .dot{
   margin-top: 0;
   margin-bottom: 0;
@@ -843,16 +901,6 @@ p{
   margin-right: auto;
 }
 
-.my-4{
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.my-8{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
 .mb-0{
   margin-bottom: 0;
 }
@@ -877,10 +925,6 @@ p{
   margin-left: 0.5rem;
 }
 
-.ml-4{
-  margin-left: 1rem;
-}
-
 .mr-4{
   margin-right: 1rem;
 }
@@ -899,10 +943,6 @@ p{
 
 .flex{
   display: flex;
-}
-
-.inline-flex{
-  display: inline-flex;
 }
 
 .table{
@@ -966,12 +1006,12 @@ p{
   width: 66.666667%;
 }
 
-.w-3\/12{
-  width: 25%;
-}
-
 .w-4\/12{
   width: 33.333333%;
+}
+
+.w-5{
+  width: 1.25rem;
 }
 
 .w-8\/12{
@@ -991,22 +1031,6 @@ p{
   width: 100%;
 }
 
-.w-16{
-  width: 4rem;
-}
-
-.w-4{
-  width: 1rem;
-}
-
-.w-6{
-  width: 1.5rem;
-}
-
-.w-5{
-  width: 1.25rem;
-}
-
 .rotate-12{
   --tw-rotate: 12deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1014,26 +1038,6 @@ p{
 
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-@keyframes fadeInRight{
-  0%{
-    transform: translateX(100%);
-    opacity: 0;
-  }
-
-  50%{
-    opacity: 0;
-  }
-
-  100%{
-    transform: translateX(0%);
-    opacity: 1;
-  }
-}
-
-.animate-fade-in-right{
-  animation: fadeInRight 2s ease-in-out;
 }
 
 .cursor-pointer{
@@ -1046,14 +1050,6 @@ p{
 
 .grid-cols-4{
   grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
-.flex-row{
-  flex-direction: row;
-}
-
-.flex-col{
-  flex-direction: column;
 }
 
 .items-center{
@@ -1080,12 +1076,12 @@ p{
   gap: 2rem;
 }
 
-.gap-y-8{
-  row-gap: 2rem;
-}
-
 .gap-y-4{
   row-gap: 1rem;
+}
+
+.gap-y-8{
+  row-gap: 2rem;
 }
 
 .overflow-hidden{
@@ -1098,19 +1094,6 @@ p{
 
 .rounded-md{
   border-radius: 0.375rem;
-}
-
-.border-2{
-  border-width: 2px;
-}
-
-.border{
-  border-width: 1px;
-}
-
-.border-verde{
-  --tw-border-opacity: 1;
-  border-color: rgb(179 222 0 / var(--tw-border-opacity));
 }
 
 .bg-branco{
