--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -597,6 +597,7 @@ h2{
 h3{
   font-size: 1.25rem;
   line-height: 1.75rem;
+  font-weight: 800;
   --tw-text-opacity: 1;
   color: rgb(110 110 110 / var(--tw-text-opacity));
 }
@@ -884,6 +885,10 @@ p{
   grid-column: span 2 / span 2;
 }
 
+.col-span-3{
+  grid-column: span 3 / span 3;
+}
+
 .-m-1{
   margin: -0.25rem;
 }
@@ -901,12 +906,12 @@ p{
   margin-right: auto;
 }
 
-.mb-0{
-  margin-bottom: 0;
-}
-
 .mb-16{
   margin-bottom: 4rem;
+}
+
+.mb-2{
+  margin-bottom: 0.5rem;
 }
 
 .mb-32{
@@ -935,6 +940,10 @@ p{
 
 .mt-4{
   margin-top: 1rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
 }
 
 .block{
@@ -969,10 +978,6 @@ p{
   height: 3.5rem;
 }
 
-.h-16{
-  height: 4rem;
-}
-
 .h-4{
   height: 1rem;
 }
@@ -996,6 +1001,10 @@ p{
 
 .min-h-20{
   min-height: 5rem;
+}
+
+.w-1\/2{
+  width: 50%;
 }
 
 .w-10{
@@ -1048,6 +1057,10 @@ p{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .grid-cols-4{
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
@@ -1094,6 +1107,10 @@ p{
 
 .rounded-md{
   border-radius: 0.375rem;
+}
+
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .bg-branco{
@@ -1156,11 +1173,6 @@ p{
   padding-right: 0;
 }
 
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1169,14 +1181,6 @@ p{
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.pb-0{
-  padding-bottom: 0;
-}
-
-.pt-4{
-  padding-top: 1rem;
 }
 
 .text-center{
@@ -1220,10 +1224,6 @@ p{
   font-weight: 400;
 }
 
-.font-semibold{
-  font-weight: 600;
-}
-
 .leading-4{
   line-height: 1rem;
 }
@@ -1253,8 +1253,49 @@ p{
   color: rgb(179 222 0 / var(--tw-text-opacity));
 }
 
+.text-\[black\]{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-\[\#000\]{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-\[\#bbb\]{
+  --tw-text-opacity: 1;
+  color: rgb(187 187 187 / var(--tw-text-opacity));
+}
+
+.text-\[\#555\]{
+  --tw-text-opacity: 1;
+  color: rgb(85 85 85 / var(--tw-text-opacity));
+}
+
+.text-\[\#\]{
+  color: #;
+}
+
+.text-\[\#000000\]{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .opacity-5{
   opacity: 0.05;
+}
+
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-2xl{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .transition-all{
