--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -689,8 +689,8 @@ p{
   display: grid;
   width: 66.666667%;
   row-gap: 1rem;
-  -moz-column-gap: 4rem;
-       column-gap: 4rem;
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
 }
 
 .coluna{
@@ -813,6 +813,33 @@ p{
   background-color: rgb(179 222 0 / var(--tw-bg-opacity));
 }
 
+.tab-celular{
+  min-height: 3rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(110 110 110 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding: 0.5rem;
+  text-align: center;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  --tw-text-opacity: 1;
+  color: rgb(37 37 37 / var(--tw-text-opacity));
+}
+
+.tab-invest{
+  height: 0.75rem;
+  min-width: 4rem;
+  padding: 0;
+  font-size: .75rem;
+}
+
+.active{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 37 37 / var(--tw-bg-opacity));
+}
+
 .fixed{
   position: fixed;
 }
@@ -901,9 +928,19 @@ p{
   margin: auto;
 }
 
+.mx-0{
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-8{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .mb-16{
@@ -934,16 +971,16 @@ p{
   margin-right: 1rem;
 }
 
+.mt-16{
+  margin-top: 4rem;
+}
+
 .mt-24{
   margin-top: 6rem;
 }
 
 .mt-4{
   margin-top: 1rem;
-}
-
-.mt-8{
-  margin-top: 2rem;
 }
 
 .block{
@@ -982,6 +1019,10 @@ p{
   height: 1rem;
 }
 
+.h-8{
+  height: 2rem;
+}
+
 .h-dvh{
   height: 100dvh;
 }
@@ -1007,12 +1048,24 @@ p{
   width: 50%;
 }
 
+.w-1\/4{
+  width: 25%;
+}
+
 .w-10{
   width: 2.5rem;
 }
 
 .w-2\/3{
   width: 66.666667%;
+}
+
+.w-2\/5{
+  width: 40%;
+}
+
+.w-3\/5{
+  width: 60%;
 }
 
 .w-4\/12{
@@ -1038,6 +1091,10 @@ p{
 
 .w-full{
   width: 100%;
+}
+
+.min-w-44{
+  min-width: 11rem;
 }
 
 .rotate-12{
@@ -1101,6 +1158,10 @@ p{
   overflow: hidden;
 }
 
+.overflow-x-scroll{
+  overflow-x: scroll;
+}
+
 .rounded-lg{
   border-radius: 0.5rem;
 }
@@ -1109,8 +1170,29 @@ p{
   border-radius: 0.375rem;
 }
 
-.rounded{
-  border-radius: 0.25rem;
+.bg-\[\#ADD8E6\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(173 216 230 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#B5E6A2\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(181 230 162 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#DAE9F8\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(218 233 248 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#DAF2D0\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(218 242 208 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FBE2D5\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 226 213 / var(--tw-bg-opacity));
 }
 
 .bg-branco{
@@ -1131,6 +1213,11 @@ p{
 .bg-verde{
   --tw-bg-opacity: 1;
   background-color: rgb(179 222 0 / var(--tw-bg-opacity));
+}
+
+.bg-verde-claro{
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 255 227 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b{
@@ -1173,6 +1260,11 @@ p{
   padding-right: 0;
 }
 
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1212,6 +1304,10 @@ p{
   line-height: 1rem;
 }
 
+.font-black{
+  font-weight: 900;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -1226,6 +1322,11 @@ p{
 
 .leading-4{
   line-height: 1rem;
+}
+
+.text-\[\#fff\]{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-azul{
@@ -1253,48 +1354,19 @@ p{
   color: rgb(179 222 0 / var(--tw-text-opacity));
 }
 
-.text-\[black\]{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.text-\[\#000\]{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.text-\[\#bbb\]{
-  --tw-text-opacity: 1;
-  color: rgb(187 187 187 / var(--tw-text-opacity));
-}
-
-.text-\[\#555\]{
-  --tw-text-opacity: 1;
-  color: rgb(85 85 85 / var(--tw-text-opacity));
-}
-
-.text-\[\#\]{
-  color: #;
-}
-
-.text-\[\#000000\]{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 .opacity-5{
   opacity: 0.05;
-}
-
-.shadow-xl{
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-2xl{
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1308,9 +1380,8 @@ p{
   transition-duration: 75ms;
 }
 
-.active{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 37 37 / var(--tw-bg-opacity));
+* {
+  /*border: 1px solid red;*/
 }
 
 .hover\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\]:hover{
