--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -557,9 +557,9 @@ video {
 }
 
 *{
-  margin: 0;
+  margin: 0px;
   box-sizing: border-box;
-  padding: 0;
+  padding: 0px;
 }
 
 html{
@@ -567,7 +567,7 @@ html{
 }
 
 body{
-  margin: 0;
+  margin: 0px;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   font-family: Nunito, sans-serif;
@@ -624,7 +624,7 @@ hr{
 }
 
 a, svg, button{
-  margin: 0;
+  margin: 0px;
   cursor: pointer;
   text-decoration-line: none;
 }
@@ -679,8 +679,8 @@ p{
   flex-direction: column;
   padding-top: 5rem;
   padding-bottom: 5rem;
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .conteudo{
@@ -729,8 +729,8 @@ p{
   border-color: rgba(0,0,0,0);
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 0px;
+  padding-right: 0px;
   font-size: 0.875rem;
   line-height: 1.25rem;
   --tw-text-opacity: 1;
@@ -777,23 +777,19 @@ p{
   transition-duration: 150ms;
 }
 
-.banner-box h4{
-  margin-bottom: 0;
-  height: 4rem;
+.box-titulo{
+  margin-bottom: 0px;
   --tw-bg-opacity: 1;
   background-color: rgb(179 222 0 / var(--tw-bg-opacity));
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 1rem;
-  padding-bottom: 0;
-  font-weight: 800;
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  padding-bottom: 0px;
 }
 
 .dot{
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
   margin-left: 1rem;
   margin-right: 1rem;
   display: inline-block;
@@ -830,8 +826,8 @@ p{
 
 .tab-invest{
   height: 0.75rem;
-  min-width: 4rem;
-  padding: 0;
+  min-width: 7rem;
+  padding: 0px;
   font-size: .75rem;
 }
 
@@ -869,7 +865,7 @@ p{
 }
 
 .left-0{
-  left: 0;
+  left: 0px;
 }
 
 .left-1\/3{
@@ -877,7 +873,7 @@ p{
 }
 
 .right-0{
-  right: 0;
+  right: 0px;
 }
 
 .right-8{
@@ -885,7 +881,7 @@ p{
 }
 
 .top-0{
-  top: 0;
+  top: 0px;
 }
 
 .top-1\/2{
@@ -921,7 +917,7 @@ p{
 }
 
 .m-0{
-  margin: 0;
+  margin: 0px;
 }
 
 .m-auto{
@@ -929,8 +925,8 @@ p{
 }
 
 .mx-0{
-  margin-left: 0;
-  margin-right: 0;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .mx-auto{
@@ -941,6 +937,10 @@ p{
 .my-8{
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.mb-0{
+  margin-bottom: 0px;
 }
 
 .mb-16{
@@ -981,6 +981,10 @@ p{
 
 .mt-4{
   margin-top: 1rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
 }
 
 .block{
@@ -1093,6 +1097,10 @@ p{
   width: 100%;
 }
 
+.w-3\/6{
+  width: 50%;
+}
+
 .min-w-44{
   min-width: 11rem;
 }
@@ -1170,6 +1178,11 @@ p{
   border-radius: 0.375rem;
 }
 
+.bg-\[\#990000\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#ADD8E6\]{
   --tw-bg-opacity: 1;
   background-color: rgb(173 216 230 / var(--tw-bg-opacity));
@@ -1215,11 +1228,6 @@ p{
   background-color: rgb(179 222 0 / var(--tw-bg-opacity));
 }
 
-.bg-verde-claro{
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 255 227 / var(--tw-bg-opacity));
-}
-
 .bg-gradient-to-b{
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -1256,8 +1264,8 @@ p{
 }
 
 .px-0{
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .py-2{
@@ -1273,6 +1281,10 @@ p{
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.pt-16{
+  padding-top: 4rem;
 }
 
 .text-center{
