--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -904,6 +904,10 @@ p{
   z-index: 50;
 }
 
+.z-0{
+  z-index: 0;
+}
+
 .col-span-2{
   grid-column: span 2 / span 2;
 }
@@ -1009,6 +1013,10 @@ p{
 
 .aspect-square{
   aspect-ratio: 1 / 1;
+}
+
+.aspect-video{
+  aspect-ratio: 16 / 9;
 }
 
 .h-12{
