--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -574,7 +574,7 @@ body{
   font-size: 1rem;
   line-height: 1.5rem;
   --tw-text-opacity: 1;
-  color: rgb(165 165 165 / var(--tw-text-opacity));
+  color: rgb(37 37 37 / var(--tw-text-opacity));
 }
 
 main{
@@ -599,7 +599,7 @@ h3{
   line-height: 1.75rem;
   font-weight: 800;
   --tw-text-opacity: 1;
-  color: rgb(110 110 110 / var(--tw-text-opacity));
+  color: rgb(37 37 37 / var(--tw-text-opacity));
 }
 
 h4{
@@ -687,7 +687,7 @@ p{
   margin-left: auto;
   margin-right: auto;
   display: grid;
-  width: 66.666667%;
+  width: 83.333333%;
   row-gap: 1rem;
   -moz-column-gap: 2rem;
        column-gap: 2rem;
@@ -731,8 +731,8 @@ p{
   padding-bottom: 0.5rem;
   padding-left: 0px;
   padding-right: 0px;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
   transition-property: all;
@@ -768,10 +768,12 @@ p{
 
 .banner-box{
   animation: fadeInRight 2s ease-in-out;
-  overflow: hidden;
   border-radius: 0.5rem;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
@@ -781,9 +783,9 @@ p{
   margin-bottom: 0px;
   --tw-bg-opacity: 1;
   background-color: rgb(179 222 0 / var(--tw-bg-opacity));
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 1rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-top: 2rem;
   padding-bottom: 0px;
 }
 
@@ -809,7 +811,7 @@ p{
   background-color: rgb(179 222 0 / var(--tw-bg-opacity));
 }
 
-.tab-celular{
+.tab-celula{
   min-height: 3rem;
   border-width: 1px;
   --tw-border-opacity: 1;
@@ -818,17 +820,31 @@ p{
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   padding: 0.5rem;
   text-align: center;
-  font-size: 0.75rem;
-  line-height: 1rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
   --tw-text-opacity: 1;
   color: rgb(37 37 37 / var(--tw-text-opacity));
 }
 
+.tab-celular-tit_1{
+  height: 2rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(179 222 0 / var(--tw-bg-opacity));
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 900;
+}
+
+.tab-celular-tit_2{
+  height: 4rem;
+  font-size: .7rem;
+  font-weight: 900;
+}
+
 .tab-invest{
   height: 0.75rem;
-  min-width: 7rem;
   padding: 0px;
-  font-size: .75rem;
+  font-size: .6rem;
 }
 
 .active{
@@ -848,12 +864,12 @@ p{
   position: relative;
 }
 
-.-bottom-1\/3{
-  bottom: -33.333333%;
-}
-
 .-right-8{
   right: -2rem;
+}
+
+.-top-6{
+  top: -1.5rem;
 }
 
 .bottom-4{
@@ -866,10 +882,6 @@ p{
 
 .left-0{
   left: 0px;
-}
-
-.left-1\/3{
-  left: 33.333333%;
 }
 
 .right-0{
@@ -904,10 +916,6 @@ p{
   z-index: 50;
 }
 
-.z-0{
-  z-index: 0;
-}
-
 .col-span-2{
   grid-column: span 2 / span 2;
 }
@@ -924,6 +932,10 @@ p{
   margin: 0px;
 }
 
+.m-6{
+  margin: 1.5rem;
+}
+
 .m-auto{
   margin: auto;
 }
@@ -938,11 +950,6 @@ p{
   margin-right: auto;
 }
 
-.my-8{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
 .mb-0{
   margin-bottom: 0px;
 }
@@ -953,6 +960,10 @@ p{
 
 .mb-2{
   margin-bottom: 0.5rem;
+}
+
+.mb-24{
+  margin-bottom: 6rem;
 }
 
 .mb-32{
@@ -975,8 +986,16 @@ p{
   margin-right: 1rem;
 }
 
+.mt-0{
+  margin-top: 0px;
+}
+
 .mt-16{
   margin-top: 4rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
 }
 
 .mt-24{
@@ -1031,10 +1050,6 @@ p{
   height: 1rem;
 }
 
-.h-8{
-  height: 2rem;
-}
-
 .h-dvh{
   height: 100dvh;
 }
@@ -1050,6 +1065,10 @@ p{
 
 .max-h-dvh{
   max-height: 100dvh;
+}
+
+.min-h-16{
+  min-height: 4rem;
 }
 
 .min-h-20{
@@ -1068,16 +1087,16 @@ p{
   width: 2.5rem;
 }
 
+.w-10\/12{
+  width: 83.333333%;
+}
+
+.w-12{
+  width: 3rem;
+}
+
 .w-2\/3{
   width: 66.666667%;
-}
-
-.w-2\/5{
-  width: 40%;
-}
-
-.w-3\/5{
-  width: 60%;
 }
 
 .w-4\/12{
@@ -1086,6 +1105,18 @@ p{
 
 .w-5{
   width: 1.25rem;
+}
+
+.w-5\/12{
+  width: 41.666667%;
+}
+
+.w-5\/6{
+  width: 83.333333%;
+}
+
+.w-7\/12{
+  width: 58.333333%;
 }
 
 .w-8\/12{
@@ -1105,21 +1136,8 @@ p{
   width: 100%;
 }
 
-.w-3\/6{
-  width: 50%;
-}
-
-.min-w-44{
-  min-width: 11rem;
-}
-
-.rotate-12{
-  --tw-rotate: 12deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.transform{
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.w-3\/12{
+  width: 25%;
 }
 
 .cursor-pointer{
@@ -1158,16 +1176,16 @@ p{
   gap: 1rem;
 }
 
-.gap-8{
-  gap: 2rem;
+.gap-6{
+  gap: 1.5rem;
+}
+
+.gap-y-16{
+  row-gap: 4rem;
 }
 
 .gap-y-4{
   row-gap: 1rem;
-}
-
-.gap-y-8{
-  row-gap: 2rem;
 }
 
 .overflow-hidden{
@@ -1176,6 +1194,10 @@ p{
 
 .overflow-x-scroll{
   overflow-x: scroll;
+}
+
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .rounded-lg{
@@ -1214,6 +1236,11 @@ p{
 .bg-\[\#FBE2D5\]{
   --tw-bg-opacity: 1;
   background-color: rgb(251 226 213 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#ff7119\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 113 25 / var(--tw-bg-opacity));
 }
 
 .bg-branco{
@@ -1271,14 +1298,13 @@ p{
   padding: 1rem;
 }
 
+.p-6{
+  padding: 1.5rem;
+}
+
 .px-0{
   padding-left: 0px;
   padding-right: 0px;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .py-4{
@@ -1289,10 +1315,6 @@ p{
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.pt-16{
-  padding-top: 4rem;
 }
 
 .text-center{
@@ -1314,6 +1336,11 @@ p{
   line-height: 1;
 }
 
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1322,10 +1349,6 @@ p{
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.font-black{
-  font-weight: 900;
 }
 
 .font-bold{
@@ -1344,6 +1367,16 @@ p{
   line-height: 1rem;
 }
 
+.text-\[\#83a000\]{
+  --tw-text-opacity: 1;
+  color: rgb(131 160 0 / var(--tw-text-opacity));
+}
+
+.text-\[\#ff0000\]{
+  --tw-text-opacity: 1;
+  color: rgb(255 0 0 / var(--tw-text-opacity));
+}
+
 .text-\[\#fff\]{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1359,23 +1392,19 @@ p{
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-cinza{
-  --tw-text-opacity: 1;
-  color: rgb(110 110 110 / var(--tw-text-opacity));
-}
-
 .text-cinza-claro{
   --tw-text-opacity: 1;
   color: rgb(165 165 165 / var(--tw-text-opacity));
 }
 
+.text-preto{
+  --tw-text-opacity: 1;
+  color: rgb(37 37 37 / var(--tw-text-opacity));
+}
+
 .text-verde{
   --tw-text-opacity: 1;
   color: rgb(179 222 0 / var(--tw-text-opacity));
-}
-
-.opacity-5{
-  opacity: 0.05;
 }
 
 .shadow-2xl{
@@ -1402,6 +1431,10 @@ p{
 
 * {
   /*border: 1px solid red;*/
+}
+
+.box-titulo {
+  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.486);
 }
 
 .hover\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\]:hover{
