--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -132,4 +132,8 @@
     .box-titulo {
         text-shadow: 0 2px 5px rgba(0, 0, 0, 0.486);
     }
+
+    .img-sombra {
+        filter: drop-shadow(0px 2px 0px rgba(0, 0, 0, 0.486));
+    }
 }
