--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -1404,6 +1404,11 @@ p{
   line-height: 1.5rem;
 }
 
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1412,6 +1417,10 @@ p{
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.font-black{
+  font-weight: 900;
 }
 
 .font-bold{
@@ -1502,6 +1511,10 @@ p{
 
 .box-titulo {
   text-shadow: 0 2px 5px rgba(0, 0, 0, 0.486);
+}
+
+.img-sombra {
+  filter: drop-shadow(0px 2px 0px rgba(0, 0, 0, 0.486));
 }
 
 .hover\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\]:hover{
