--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -699,30 +699,6 @@ p{
   flex-direction: column;
 }
 
-.btn{
-  display: inline-flex;
-  align-items: center;
-  border-radius: 9999px;
-  border-width: 0px;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  font-weight: 600;
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.btn:hover{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
 .nav-link{
   margin-left: 3rem;
   display: inline;
@@ -785,9 +761,9 @@ p{
   margin-bottom: 0px;
   --tw-bg-opacity: 1;
   background-color: rgb(179 222 0 / var(--tw-bg-opacity));
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  padding-top: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 1rem;
   padding-bottom: 0px;
 }
 
@@ -838,7 +814,7 @@ p{
 }
 
 .tab-celular-tit_2{
-  height: 4rem;
+  height: 5rem;
   font-size: .7rem;
   font-weight: 900;
 }
@@ -913,14 +889,6 @@ p{
   top: -2rem;
 }
 
-.bottom-0{
-  bottom: 0px;
-}
-
-.bottom-4{
-  bottom: 1rem;
-}
-
 .bottom-8{
   bottom: 2rem;
 }
@@ -929,20 +897,12 @@ p{
   left: 0px;
 }
 
-.right-0{
-  right: 0px;
-}
-
 .right-8{
   right: 2rem;
 }
 
 .top-0{
   top: 0px;
-}
-
-.top-1\/2{
-  top: 50%;
 }
 
 .z-10{
@@ -973,20 +933,12 @@ p{
   grid-column: span 4 / span 4;
 }
 
-.-m-1{
-  margin: -0.25rem;
-}
-
 .m-0{
   margin: 0px;
 }
 
-.m-6{
-  margin: 1.5rem;
-}
-
-.m-auto{
-  margin: auto;
+.m-4{
+  margin: 1rem;
 }
 
 .mx-0{
@@ -1001,6 +953,10 @@ p{
 
 .mb-0{
   margin-bottom: 0px;
+}
+
+.mb-12{
+  margin-bottom: 3rem;
 }
 
 .mb-16{
@@ -1027,10 +983,6 @@ p{
   margin-bottom: 2rem;
 }
 
-.ml-2{
-  margin-left: 0.5rem;
-}
-
 .ml-4{
   margin-left: 1rem;
 }
@@ -1051,20 +1003,16 @@ p{
   margin-top: 4rem;
 }
 
-.mt-2{
-  margin-top: 0.5rem;
-}
-
 .mt-24{
   margin-top: 6rem;
 }
 
-.mt-4{
-  margin-top: 1rem;
-}
-
 .mt-8{
   margin-top: 2rem;
+}
+
+.mb-28{
+  margin-bottom: 7rem;
 }
 
 .block{
@@ -1081,10 +1029,6 @@ p{
 
 .grid{
   display: grid;
-}
-
-.hidden{
-  display: none;
 }
 
 .aspect-square{
@@ -1192,15 +1136,6 @@ p{
   width: 66.666667%;
 }
 
-.w-auto{
-  width: auto;
-}
-
-.w-fit{
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
 .w-full{
   width: 100%;
 }
@@ -1278,10 +1213,6 @@ p{
   border-radius: 0.5rem;
 }
 
-.rounded-md{
-  border-radius: 0.375rem;
-}
-
 .border-\[0\.5px\]{
   border-width: 0.5px;
 }
@@ -1319,11 +1250,6 @@ p{
 .bg-\[\#ff7119\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 113 25 / var(--tw-bg-opacity));
-}
-
-.bg-branco{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-cinza-claro-2{
@@ -1385,11 +1311,6 @@ p{
   padding-right: 0px;
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -1428,6 +1349,11 @@ p{
   line-height: 1.75rem;
 }
 
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1435,10 +1361,6 @@ p{
 
 .font-black{
   font-weight: 900;
-}
-
-.font-bold{
-  font-weight: 700;
 }
 
 .font-extrabold{
@@ -1451,10 +1373,6 @@ p{
 
 .font-semibold{
   font-weight: 600;
-}
-
-.leading-4{
-  line-height: 1rem;
 }
 
 .text-\[\#83a000\]{
@@ -1497,6 +1415,20 @@ p{
   color: rgb(179 222 0 / var(--tw-text-opacity));
 }
 
+.text-\[\#ff00ff\]{
+  --tw-text-opacity: 1;
+  color: rgb(255 0 255 / var(--tw-text-opacity));
+}
+
+.text-\[\#\#FEB42F\]{
+  color: ##FEB42F;
+}
+
+.text-\[\#FEB42F\]{
+  --tw-text-opacity: 1;
+  color: rgb(254 180 47 / var(--tw-text-opacity));
+}
+
 .opacity-90{
   opacity: 0.9;
 }
@@ -1513,16 +1445,6 @@ p{
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.transition-all{
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.duration-75{
-  transition-duration: 75ms;
-}
-
 * {
   /*border: 1px solid red;*/
 }
@@ -1535,10 +1457,7 @@ p{
   filter: drop-shadow(0px 2px 0px rgba(0, 0, 0, 0.486));
 }
 
-.hover\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\]:hover{
-  background-color: rgba(0,0,0,0.8);
-}
-
-.group:hover .group-hover\:ml-6{
-  margin-left: 1.5rem;
+.box-preco-invest {
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
 }
