--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -971,8 +971,8 @@ p{
   margin-bottom: 6rem;
 }
 
-.mb-32{
-  margin-bottom: 8rem;
+.mb-28{
+  margin-bottom: 7rem;
 }
 
 .mb-4{
@@ -1007,12 +1007,16 @@ p{
   margin-top: 6rem;
 }
 
+.mt-3{
+  margin-top: 0.75rem;
+}
+
 .mt-8{
   margin-top: 2rem;
 }
 
-.mb-28{
-  margin-bottom: 7rem;
+.mb-6{
+  margin-bottom: 1.5rem;
 }
 
 .block{
@@ -1172,16 +1176,16 @@ p{
   justify-content: space-between;
 }
 
-.gap-16{
-  gap: 4rem;
-}
-
 .gap-4{
   gap: 1rem;
 }
 
 .gap-6{
   gap: 1.5rem;
+}
+
+.gap-8{
+  gap: 2rem;
 }
 
 .gap-x-16{
@@ -1380,6 +1384,11 @@ p{
   color: rgb(131 160 0 / var(--tw-text-opacity));
 }
 
+.text-\[\#FEB42F\]{
+  --tw-text-opacity: 1;
+  color: rgb(254 180 47 / var(--tw-text-opacity));
+}
+
 .text-\[\#ff0000\]{
   --tw-text-opacity: 1;
   color: rgb(255 0 0 / var(--tw-text-opacity));
@@ -1413,20 +1422,6 @@ p{
 .text-verde{
   --tw-text-opacity: 1;
   color: rgb(179 222 0 / var(--tw-text-opacity));
-}
-
-.text-\[\#ff00ff\]{
-  --tw-text-opacity: 1;
-  color: rgb(255 0 255 / var(--tw-text-opacity));
-}
-
-.text-\[\#\#FEB42F\]{
-  color: ##FEB42F;
-}
-
-.text-\[\#FEB42F\]{
-  --tw-text-opacity: 1;
-  color: rgb(254 180 47 / var(--tw-text-opacity));
 }
 
 .opacity-90{
