--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -582,24 +582,45 @@ main{
 }
 
 h1{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
   font-weight: 300;
 }
 
+@media (min-width: 1024px){
+  h1{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
 h2{
-  font-size: 1.875rem;
+  font-size: 1.25rem;
   line-height: 2.25rem;
   --tw-text-opacity: 1;
   color: rgb(179 222 0 / var(--tw-text-opacity));
 }
 
+@media (min-width: 1024px){
+  h2{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
 h3{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
   font-weight: 800;
   --tw-text-opacity: 1;
   color: rgb(37 37 37 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px){
+  h3{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 h4{
@@ -692,6 +713,12 @@ p{
   row-gap: 1rem;
   -moz-column-gap: 2rem;
        column-gap: 2rem;
+}
+
+@media (min-width: 1024px){
+  .conteudo{
+    width: 83.333333%;
+  }
 }
 
 .coluna{
@@ -979,6 +1006,10 @@ p{
   margin-bottom: 1rem;
 }
 
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
 .mb-8{
   margin-bottom: 2rem;
 }
@@ -1015,10 +1046,6 @@ p{
   margin-top: 2rem;
 }
 
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-
 .block{
   display: block;
 }
@@ -1035,12 +1062,12 @@ p{
   display: grid;
 }
 
-.aspect-square{
-  aspect-ratio: 1 / 1;
+.hidden{
+  display: none;
 }
 
-.aspect-video{
-  aspect-ratio: 16 / 9;
+.aspect-square{
+  aspect-ratio: 1 / 1;
 }
 
 .h-12{
@@ -1055,10 +1082,6 @@ p{
   height: 1rem;
 }
 
-.h-dvh{
-  height: 100dvh;
-}
-
 .h-fit{
   height: -moz-fit-content;
   height: fit-content;
@@ -1066,10 +1089,6 @@ p{
 
 .h-full{
   height: 100%;
-}
-
-.max-h-dvh{
-  max-height: 100dvh;
 }
 
 .min-h-16{
@@ -1108,10 +1127,6 @@ p{
   width: 40%;
 }
 
-.w-3\/12{
-  width: 25%;
-}
-
 .w-4\/12{
   width: 33.333333%;
 }
@@ -1142,6 +1157,12 @@ p{
 
 .w-full{
   width: 100%;
+}
+
+.scale-90{
+  --tw-scale-x: .9;
+  --tw-scale-y: .9;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer{
@@ -1176,12 +1197,12 @@ p{
   justify-content: space-between;
 }
 
-.gap-4{
-  gap: 1rem;
+.gap-12{
+  gap: 3rem;
 }
 
-.gap-6{
-  gap: 1.5rem;
+.gap-4{
+  gap: 1rem;
 }
 
 .gap-8{
@@ -1353,11 +1374,6 @@ p{
   line-height: 1.75rem;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1455,4 +1471,77 @@ p{
 .box-preco-invest {
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
+}
+
+@media (min-width: 1024px){
+  .lg\:col-span-3{
+    grid-column: span 3 / span 3;
+  }
+
+  .lg\:col-span-2{
+    grid-column: span 2 / span 2;
+  }
+
+  .lg\:mt-0{
+    margin-top: 0px;
+  }
+
+  .lg\:flex{
+    display: flex;
+  }
+
+  .lg\:h-dvh{
+    height: 100dvh;
+  }
+
+  .lg\:h-full{
+    height: 100%;
+  }
+
+  .lg\:max-h-dvh{
+    max-height: 100dvh;
+  }
+
+  .lg\:w-2\/3{
+    width: 66.666667%;
+  }
+
+  .lg\:w-4\/12{
+    width: 33.333333%;
+  }
+
+  .lg\:w-1\/2{
+    width: 50%;
+  }
+
+  .lg\:w-5\/6{
+    width: 83.333333%;
+  }
+
+  .lg\:scale-100{
+    --tw-scale-x: 1;
+    --tw-scale-y: 1;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:gap-6{
+    gap: 1.5rem;
+  }
+
+  .lg\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
 }
