--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -659,6 +659,10 @@ p{
   margin-bottom: 1rem;
 }
 
+iconify-icon{
+  cursor: pointer;
+}
+
 .container{
   width: 100%;
 }
@@ -724,6 +728,31 @@ p{
 .coluna{
   display: flex;
   flex-direction: column;
+}
+
+.btn{
+  display: inline-flex;
+  cursor: pointer;
+  align-items: center;
+  border-radius: 0.25rem;
+  border-width: 0px;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 600;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.btn:hover{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .nav-link{
@@ -794,28 +823,6 @@ p{
   padding-bottom: 0px;
 }
 
-.dot{
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  display: inline-block;
-  height: 0.5rem;
-  width: 0.5rem;
-  cursor: pointer;
-  border-radius: 9999px;
-  --tw-bg-opacity: 1;
-  background-color: rgb(165 165 165 / var(--tw-bg-opacity));
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.dot:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(179 222 0 / var(--tw-bg-opacity));
-}
-
 .tab-celula{
   min-height: 3rem;
   border-width: 1px;
@@ -869,6 +876,7 @@ p{
   margin-top: 2rem;
   margin-bottom: 2rem;
   display: flex;
+  cursor: pointer;
   align-items: center;
   justify-content: center;
   border-radius: 9999px;
@@ -887,9 +895,16 @@ p{
   line-height: 1rem;
 }
 
-.active{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 37 37 / var(--tw-bg-opacity));
+.input-campo{
+  border-radius: 0.25rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(165 165 165 / var(--tw-border-opacity));
+  padding: 0.5rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .fixed{
@@ -940,6 +955,10 @@ p{
   z-index: 20;
 }
 
+.z-30{
+  z-index: 30;
+}
+
 .z-40{
   z-index: 40;
 }
@@ -966,6 +985,10 @@ p{
 
 .m-4{
   margin: 1rem;
+}
+
+.m-auto{
+  margin: auto;
 }
 
 .mx-0{
@@ -1042,12 +1065,12 @@ p{
   margin-top: 0.75rem;
 }
 
-.mt-8{
-  margin-top: 2rem;
+.mt-4{
+  margin-top: 1rem;
 }
 
-.block{
-  display: block;
+.mt-8{
+  margin-top: 2rem;
 }
 
 .flex{
@@ -1082,6 +1105,10 @@ p{
   height: 1rem;
 }
 
+.h-dvh{
+  height: 100dvh;
+}
+
 .h-fit{
   height: -moz-fit-content;
   height: fit-content;
@@ -1099,8 +1126,8 @@ p{
   min-height: 5rem;
 }
 
-.w-1\/2{
-  width: 50%;
+.w-1\/3{
+  width: 33.333333%;
 }
 
 .w-1\/4{
@@ -1143,10 +1170,6 @@ p{
   width: 41.666667%;
 }
 
-.w-5\/6{
-  width: 83.333333%;
-}
-
 .w-7\/12{
   width: 58.333333%;
 }
@@ -1179,6 +1202,10 @@ p{
 
 .grid-cols-4{
   grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.flex-col{
+  flex-direction: column;
 }
 
 .items-center{
@@ -1238,8 +1265,16 @@ p{
   border-radius: 0.5rem;
 }
 
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
 .border-\[0\.5px\]{
   border-width: 0.5px;
+}
+
+.bg-\[\#000000ad\]{
+  background-color: #000000ad;
 }
 
 .bg-\[\#990000\]{
@@ -1275,6 +1310,11 @@ p{
 .bg-\[\#ff7119\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 113 25 / var(--tw-bg-opacity));
+}
+
+.bg-branco{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-cinza-claro-2{
@@ -1474,12 +1514,12 @@ p{
 }
 
 @media (min-width: 1024px){
-  .lg\:col-span-3{
-    grid-column: span 3 / span 3;
-  }
-
   .lg\:col-span-2{
     grid-column: span 2 / span 2;
+  }
+
+  .lg\:col-span-3{
+    grid-column: span 3 / span 3;
   }
 
   .lg\:mt-0{
@@ -1502,16 +1542,16 @@ p{
     max-height: 100dvh;
   }
 
+  .lg\:w-1\/2{
+    width: 50%;
+  }
+
   .lg\:w-2\/3{
     width: 66.666667%;
   }
 
   .lg\:w-4\/12{
     width: 33.333333%;
-  }
-
-  .lg\:w-1\/2{
-    width: 50%;
   }
 
   .lg\:w-5\/6{
@@ -1528,12 +1568,12 @@ p{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .lg\:grid-cols-4{
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:gap-6{
