--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -50,7 +50,7 @@
     }
     
     li, p {
-        @apply text-sm leading-5
+        @apply text-xl
     }
 
     p {
@@ -68,7 +68,7 @@
     }
     
     .conteudo {
-        @apply grid gap-y-4 gap-x-8 mx-auto w-5/6 lg:w-10/12
+        @apply grid gap-y-4 gap-x-8 mx-auto w-5/6 lg:w-10/12 xl:w-8/12
     }
     
     .coluna {
