feat: Sistema de cotação de economia anual
- rager funcional com a tabela e o gráfico
- gráfico movido e conectado aos dados da tabela
- biblioteca chartjs-plugin-datalabels adicionado ao projeto (data labels no grafico)

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -155,8 +155,12 @@ xl	1280px	@media (min-width: 1280px) { ... }
         @apply w-5/6 p-4 bg-white
     }
 
+    .tab-descr-valor {
+        @apply text-xs
+    }
+
     .tab-orcamento-valores {
-        @apply text-right
+        @apply text-right w-2/5 h-8 text-xs
     }
 
     .lp-banner strong {
