style: Ajustes e correções
- Ajuste no título e subtitulo
- Mudança no texto e link do primeiro botão
- Título simulador ajustado
- Estilo geral do simulador refeito
- Logo inserido na parte inferior da LP2
- Ajuste no texto link para a página Home

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -170,6 +170,18 @@ xl	1280px	@media (min-width: 1280px) { ... }
     .lp-lista-item {
         @apply text-neutral-200 text-sm list-disc
     }
+
+    .tabela-simulador tbody tr {
+        @apply odd:bg-neutral-100
+    }
+
+    .tabela-simulador tbody tr td {
+        @apply first:pl-4 last:pr-4
+    }
+
+    .tabela-simulador tbody tr td {
+        @apply py-4
+    }
 }
 
 @layer utilities {
